--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ Thumbs.db
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.production.local
